Reformatted the code and updated the README file.